--- a/assets/scss/bootstrap.scss
+++ b/assets/scss/bootstrap.scss
@@ -1,38 +1,6 @@
 /******* Bootstrap Theming ********/
 
-$enable-gradients: true;
-$enable-shadows: true;
-$enable-dark-mode: true;
-$enable-cssgrid: true;
-
-$primary: #FFD333;
-//$primary: #ff9000;
-$secondary: #F5F5F5;
-$light: #FFFFFF;
-$dark: #3D464D;
-//$dark: #212529;
-//$dark: #000;
-
-$font-family-sans-serif: 'Roboto', sans-serif;
-
-$body-bg: $secondary;
-//$body-bg: $dark;
-
-$body-color: #6C757D;
-
-$headings-color: $dark;
-
-$enable-responsive-font-sizes: true;
-
-$enable-rounded: false;
-
-//$btn-focus-box-shadow: none;
-//
-//$btn-active-box-shadow: none;
-//
-//$input-btn-focus-box-shadow: none;
-
-$input-placeholder-color: #999999;
+@import "variables";
 
 // Required
 @import "bootstrap/scss/functions";
@@ -53,14 +21,14 @@ $input-placeholder-color: #999999;
 @import "bootstrap/scss/buttons";
 @import "bootstrap/scss/transitions";
 @import "bootstrap/scss/dropdown";
-// @import "bootstrap/scss/button-group";
+ @import "bootstrap/scss/button-group";
 @import "bootstrap/scss/nav";
 @import "bootstrap/scss/navbar"; // Requires nav
  @import "bootstrap/scss/card";
 @import "bootstrap/scss/breadcrumb";
 // @import "bootstrap/scss/accordion";
-// @import "bootstrap/scss/pagination";
-// @import "bootstrap/scss/badge";
+ @import "bootstrap/scss/pagination";
+ @import "bootstrap/scss/badge";
 // @import "bootstrap/scss/alert";
 // @import "bootstrap/scss/progress";
 // @import "bootstrap/scss/list-group";
@@ -69,7 +37,7 @@ $input-placeholder-color: #999999;
 @import "bootstrap/scss/modal"; // Requires transitions
 // @import "bootstrap/scss/tooltip";
 @import "bootstrap/scss/popover";
-@import "bootstrap/scss/carousel";
+//@import "bootstrap/scss/carousel";
 // @import "bootstrap/scss/spinners";
 @import "bootstrap/scss/offcanvas"; // Requires transitions
 // @import "bootstrap/scss/placeholders";
