--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -30,6 +30,9 @@ $enable-rounded: false;
 //
 //$input-btn-focus-box-shadow: none;
 
+$card-border-color: transparent;
+$card-border-width: 0;
+
 $input-placeholder-color: #999999;
 
 $grid-breakpoints: (
